fix text align

--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ a.navbar-brand {
     font-family: 'OpenSans-Regular';
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .bloc_service_texte {
         text-align: center;
     }
